--- a/services.html
+++ b/services.html
@@ -34,9 +34,7 @@
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="logo" class="img-fluid">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
+          
 
     <div style="margin-right: 150px;" class="topnav" id="myTopnav">
     
@@ -243,3 +241,15 @@
 </body>
 
 </html>
+
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
