--- a/create-post.html
+++ b/create-post.html
@@ -187,7 +187,7 @@
             <div class="row comment-row">
                 
                 <!-- blog comment form part start -->
-                <div class="col-lg-6 col-mg-12">
+                <div class="col-lg-6 col-mg-12" style="margin-left: auto; margin-right: auto;">
                     <div class="comment-reply">
                         <h3>Create blog</h3>
                         <div class="comment-reply-col">
