--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 col-md-12">
                     <div class="about_img">
-                        <img src="images/own_img01.jpg" alt="own_img" class="img-fluid">
+                        <img src="images/home.jpg" alt="own_img" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-12">
