--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"  />
 </head>
-<body>
+<body onload="getTodos()">
     <h1 class="title">My To Do List</h1>
     <div class="todo-list">
         <div class="list-head">
             <input type="text" class="lists">
-            <input type="button" value="+" class="add-list"add>
+            <input type="button" value="+" class="add-list">
         </div>
 
-        <div class="tasks">
+        <div class="tasks" id="todos">
            
         </div>
     </div>
