--- a/about.html
+++ b/about.html
@@ -157,24 +157,28 @@
                 </div>
                 <div class="col-lg-7 col-md-12">
                     <div class="about_txt">
-                        <h4>Jubayer Hossain</h4>
-                        <h3> Graphic & WEB DESIGNER, WEB DEVELOPER FROM Canada</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti ea, assumenda aut quaerat facilis sequi ullam deserunt voluptatum pariatur debitis excepturi repellendus quibusdam, aspernatur cumque, consequatur quos neque doloremque blanditiis cum ipsam. Libero in reiciendis perferendis. At, officia illo. </p>
+                        <h4>Robert UWITONZE</h4>
+                        <h3> MACHINE LEARNER ENGINEER & WEB DESIGNER,
+                            WEB DEVELOPER FROM RWANDA</h3>
+                        <p>Technology has always been in my dreams since i was young, 
+                            and every time i got a time i enjoy it to the fullest. 
+                             i enjoy technology by developing my skills in different staffs 
+                            i like the most.. </p>
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
                                 <div class="about-detils">
                                     <ul>
                                         <li>
-                                            <p><span> Birthday:</span>01.07.1990</p>
+                                            <p><span> Birthday:</span>01.07.1999</p>
                                         </li>
                                         <li>
-                                            <p><span> Age: </span> 28</p>
+                                            <p><span> Age: </span> 23</p>
                                         </li>
                                         <li>
-                                            <p><span> City: </span>Dhaka, Bangladesh</p>
+                                            <p><span> City: </span>Kigali/p>
                                         </li>
                                         <li>
-                                            <p><span> Degree:</span> Master</p>
+                                            <p><span> Degree:</span> A1</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -183,16 +187,16 @@
                                 <div class="about-detils">
                                     <ul>
                                         <li>
-                                            <p><span> Study: </span>Chicago University</p>
+                                            <p><span> Study: </span> University of Rwanda</p>
                                         </li>
                                         <li>
-                                            <p><span> Website: </span>www.mywebsite.com</p>
+                                            <p><span> Website: </span>www.rootikit.com</p>
                                         </li>
                                         <li>
-                                            <p><span> Phone:</span> +77 022 177 05 05</p>
+                                            <p><span> Phone:</span> +250 781 352 115</p>
                                         </li>
                                         <li>
-                                            <p><span> Mail:</span>mymail@gmail.com</p>
+                                            <p><span> Mail:</span>robertu20002000@gmail.com</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -320,16 +324,16 @@
                     <div class="con-col text-center">
                         <i class="fal fa-mobile"></i>
                         <h4>Call Me On</h4>
-                        <p>+88 01345 123 856</p>
-                        <p>+88 01345 123 856</p>
+                        <p>+250 781 352 115</p>
+                        <p>+250 781 352 115</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <div class="con-col text-center">
                         <i class="fal fa-envelope"></i>
                         <h4>Email Me At</h4>
-                        <p>yourmail@email.com</p>
-                        <p>yoursite@email.com</p>
+                        <p>robertu20002000@gmail.com</p>
+                        <p>therobu1@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4">
